[package]
name = "sonyflake"
version = "0.1.1"
authors = ["Arne Bahlo <hallo@arne.me>"]
license = "MIT"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
repository = "https://github.com/bahlo/sonyflake-rs"
readme = "README.md"
keywords = ["sonyflake", "snowflake", "random", "id", "generator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
thiserror = "1.0"
pnet = "0.27"
