[package]
name = "sonyflake"
version = "0.2.0"
authors = ["Arne Bahlo <hallo@arne.me>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
repository = "https://github.com/bahlo/sonyflake-rs"
readme = "README.md"
keywords = ["sonyflake", "snowflake", "random", "id", "generator"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
thiserror = "1.0"
pnet_datalink = { version = "0.35", default-features = false }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "bench"
harness = false
